--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -176,7 +176,7 @@
     }
     &__right2 {
       display: grid;
-      grid-template-rows: 50% 50%;
+      grid-template-rows: auto;
       grid-template-columns: 50% 50%;
       grid-gap: 10px;
       padding: 30px 15px;
@@ -194,6 +194,7 @@
   background-image: url(../images/build-progress/card-bg.svg);
   background-position: calc(100% + 1px) -1px;
   background-repeat: repeat-y;
+  background-size: var(--decor-size) auto;
   border: 1px solid #DBDBDB;
   &__img {
 
@@ -231,6 +232,9 @@
   }
   @include to(768px){
     --side-padding:15px; 
+  }
+  @include to(575px){
+    --decor-size:25px;
   }
 }
 
@@ -291,6 +295,9 @@
   flex-wrap: wrap;
   &>*:nth-child(n+2){
     margin-left: var(--gap);
+  }
+  @include to(575px){
+    --gap:10px;
   }
 }
 
@@ -388,11 +395,10 @@
         overflow: hidden;
         transition: .3s ease-out;
         width: 80%;
-        z-index: -1;
+        // z-index: -1;
+        pointer-events: all;
         img {
-            // transition: .3s ease-out;
-            // border: 2px solid transparent;
-            // width: 100px;
+            object-fit: cover;
         }
         img[class*=active] {
             // border: 2px solid $color-gold;
@@ -463,10 +469,8 @@
       flex-wrap: wrap;
     }
     &__wrap-title {
-        // position: absolute;
         left: 50%;
         top: var(--self-vert-padding);
-        transform: translateX(-50%);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -476,12 +480,10 @@
       top: var(--self-vert-padding);
     }
     .arrow-next {
-        // position: absolute;
-        right: calc(8% - 20px);
-        bottom: calc(var(--self-side-padding) + 50px);
+      right: calc(8% - 20px);
+      bottom: calc(var(--self-side-padding) + 50px);
     }
     .arrow-prev {
-        // position: absolute;
         transform: rotate(0.5turn);
         left: calc(8% - 20px);
         bottom: calc(var(--self-side-padding) + 50px);
@@ -513,14 +515,13 @@
             transform: rotate(0.5turn);
         }
     }
-    @include to(768px) {
-        &__wrap-nav>* {
-            transform: translateX(-50%) !important;
-        }
-    }
+    
     @include to(575px) {
         --self-side-padding:15px;
         --self-vert-padding:20px;
+        &__img-slider {
+          width: calc(100% - 30px);
+        }
         &>svg {
             width: 100px;
         }
@@ -535,18 +536,38 @@
             height: 38px;
             width: 38px;
         }
-        &__wrap-nav {
-            height: calc(50px+var(--self-side-padding))
+        .absolute-link {
+          display: flex;
         }
-        &__img-slider {
-            height: 50px;
+        &__head>svg {
+          width: 88px;
+          height: 34px;
         }
-        &__img-slider img {
-            width: 50px;
+        &__arrow-counter-wrap {
+          bottom: 20px;
+          transform: translate(-50%, 0%);
+          flex-wrap: wrap;
+          width: 100%;
+          &>*:nth-child(n+2){
+            margin-left: 0px;
+          }
         }
-        .arrow-next,
-        .arrow-prev {
-            bottom: calc(var(--self-side-padding) + 25px);
+        &__arrow-counter-wrap>* {
+          
+        }
+        &__arrow-counter-wrap>[class*='gallery']{
+          order: 1;
+          width: 50%;
+        }
+        &__arrow-counter-wrap>[class*='arrow']{
+          order: 2;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        &__arrow-counter-wrap>[class*='count']{
+          order: 3;
+          width: 100%;
+          justify-content: center;
         }
     }
 }
@@ -642,5 +663,6 @@
   @include to(575px){
     --side-padd:15px;
     width: max(25%, 320px);
+    
   }
 }
