--- a/src/assets/styles/pages/about.scss
+++ b/src/assets/styles/pages/about.scss
@@ -28,6 +28,7 @@ body[id*='about']{
 
 .about-double-side-block {
     display: flex;
+    flex-wrap: wrap;
     &>* {
         position: relative;
     }
@@ -79,6 +80,43 @@ body[id*='about']{
       .info-list-item {
         padding-left: 5%;
         padding-right: 5%;
+      }
+    }
+    @include to(1024px){
+      &__left,
+      &__right {
+        width: 100%;
+      }
+      &__left {
+        height: 0;
+        padding-top: 50%;
+        position: relative;
+        .subtitle-with-vertical-decor {
+          position: absolute;
+          left: 0;
+          top: 0;
+        }
+      }
+
+      &__right {
+        border: 1px solid #DBDBDB;
+      }
+      &__right ul {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .info-list-item:nth-child(n+2),
+      .info-list-item:first-child {
+        border: none;
+      }
+      .info-list-item:nth-child(-n+2){
+        border-bottom: 1px solid #DBDBDB;
+      }
+      .info-list-item:nth-child(odd){
+        border-right: 1px solid #DBDBDB;
+      }
+      .info-list-item {
+        width: 100%;
       }
     }
 }
@@ -206,12 +244,20 @@ body[id*='about']{
     }
     @include to(1024px){
       --between-margin:10px;
-        padding-left: 40px;
-        padding-right: 40px;
-        background-size: 75px, 75px;
+        padding-left: 62px;
+        padding-right: 62px;
+        padding-bottom: 110px;
+        // background-size: 75px, 75px;
         &__text {
           width: 100%;
-          margin-top: 20px;
+          margin-top: 40px;
+      }
+      &__foto-wrap {
+        width: max(calc((100% - var(--title-width)) / 2 - (var(--between-margin) * 2)), 360px);
+      }
+      &__title{
+        padding-top: 40px;
+        padding-bottom: 40px;
       }
     }
 
@@ -230,6 +276,17 @@ body[id*='about']{
     @include from(1680px){
       font-size: 18px;
       line-height: 1.6em;
+    }
+    @include to(1024px){
+      padding-left: 0;
+      padding-right: 0;
+      line-height: 1.7em;
+      &>* {
+        width: calc(50% - 10px);
+      }
+      &>*:nth-child(odd) {
+        margin-right: 10px;
+      }
     }
 }
 
@@ -318,9 +375,35 @@ body[id*='about']{
     }
     }
     @include to(1024px){
+      grid-template-rows: auto;
       &>.subtitle-with-vertical-decor {
-        padding-right: calc(var(--decor-width) + 5%);
-        font-size: 12px;
+        padding-right: calc(var(--decor-width) + 85px);
+        // font-size: 12px;
+      }
+      
+      &__subtitle {
+        grid-area: 1/1/1/3;
+      }
+      &__bg {
+        grid-area: 2/1/2/3; 
+      }
+      &__list {
+        grid-area: 3/1/3/3;
+      }
+      .subtitle-with-vertical-decor{
+        min-height: 180px;
+        grid-area: auto/1/auto/3;
+        background-size: 47px auto;
+      }
+      &>.subtitle-with-vertical-decor:nth-child(odd) {
+        margin-left: 0;
+        padding-left: calc(var(--decor-width) + 85px);
+        
+      }
+      &>.subtitle-with-vertical-decor:nth-child(even) {
+        margin-left: 0;
+        padding-left: calc(var(--decor-width) + 85px);
+        
       }
     }
 }
@@ -406,16 +489,47 @@ body[id*='about']{
       }
     }
     @include to(1024px){
-      grid-template-columns: 50% 50%;
+      grid-template-columns: 100%;
       grid-template-rows: auto;
       .info-list-item {
-        padding-left: 5%;
+        padding-left: 60px;
         padding-right: 5%;
+        height: auto;
       }
       &:nth-child(odd) {
         // background-color: red;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 100%;
         grid-template-rows: auto;
+      }
+      &>img:not(.dimensions-single-block__pattern) {
+        height: 100%;
+        height: calc(100vw * 0.75);
+      }
+      &__text {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      &__text>* {
+        width: 50%;
+      }
+      &__pattern {
+        bottom: auto;
+        top: calc(100vw * 0.75);
+        transform: translateY(-100%);
+      }
+      &:nth-child(odd)>img:not(.dimensions-single-block__pattern) {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        height: calc(100vw * 0.75);
+        object-fit: cover;
+      }
+      &:nth-child(odd) &__text {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 2;
       }
     }
 }
@@ -518,7 +632,7 @@ body[id*='about']{
       }
     }
     @include to(1024px){
-      background-image: none;
+      // background-image: none;
       grid-template-rows: 2fr 6fr 2fr;
       --decor-width:0;
       &__slides {
@@ -526,6 +640,35 @@ body[id*='about']{
       }
       &__title {
         grid-area: 1 / 1 / 2 / 7;
+      }
+    }
+    @include to(950px){
+      grid-template-columns: 85px auto auto auto auto 85px;
+      grid-template-rows:16vh 48vh auto;
+      background: url(../images/about/slider-decor-tablet-right.svg) right no-repeat, 
+      url(../images/about/slider-decor-tablet-left.svg) left no-repeat;
+      background-position: 0 190px, 100% 190px;
+      &__slides {
+        grid-area: 2/2/2/6;
+      }
+      &__title{
+        grid-area: 1 / 2 / 2 / 6;
+      }
+      &__text>* {
+        width: 100%;
+        height: auto;
+        padding-top: 35px;
+        padding-bottom: 35px;
+        padding-left: 35px;
+        padding-right: 35px;
+      }
+      [data-next] {
+        top: 38vh;
+        right: 85px;
+      }
+      [data-prev] {    
+          top: 38vh;
+          left: 85px;
       }
     }
 }
