--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -22,6 +22,9 @@ body {
     @include from(1680px) {
         font-size: 48px;
     }
+    @include to(950px){
+      margin-bottom: 30px;
+    }
     @include to(575px) {
         font-size: 24px;
     }
@@ -214,7 +217,7 @@ body {
   }
   @include to(950px){
     .subtitle {
-      padding-right: 20px;
+      padding-right: 100px;
       padding-left: 20px;
     }
     svg {
