--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -113,6 +113,7 @@ justify-items:start;
     display: flex;
     border-left:1px solid #DBDBDB;
     border-right:1px solid #DBDBDB;
+    width: 100%;
     &>* {
       width: 33.3%;
     }
@@ -525,6 +526,17 @@ justify-items:start;
         }
     }
     
+    @include from-to(576px,950px){
+      .absolute-link {
+        top: 110px;
+      }
+      &__arrow-counter-wrap {
+        width: 100%;
+      }
+      &__img-slider {
+        height: 58vh;
+      }
+    }
     @include to(575px) {
         --self-side-padding:15px;
         --self-vert-padding:20px;
