--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -251,4 +251,5 @@
 @import './pages/about.scss';
 @import './pages/developer.scss';
 @import './pages/build-progress.scss';
+@import './pages/leisure-page.scss';
 
