--- a/src/assets/styles/pages/leisure-page.scss
+++ b/src/assets/styles/pages/leisure-page.scss
@@ -4,12 +4,13 @@
   top: 0;
   // width: 50vw !important;
   // height: 50vh !important;
+
 }
 
 .front-block {
   position: relative;
   display: flex;
-  min-height: calc(100vh - var(--header-h));
+  min-height: calc(100vh - var(--header-h)  - 60px);
 
   .info-list-item{
     max-width: none;
@@ -33,15 +34,30 @@
     margin-top: calc(var(--header-h) * -1);
     margin-right: calc(var(--page-side-fields) * -1);
     width: calc(65% + var(--page-side-fields));
+    /* 60 px - высота хлебных кроше*/
     max-height: calc(100vh - var(--header-h));
+    canvas {
+      pointer-events: none;
+    }
   }
   &__text-wrap {
     padding-right: calc(100% / 12);
     width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .page-title {
     text-align: left;
     margin-bottom: 10px;
+  }
+  @include from(1680px){
+    .page-title {
+      margin-bottom: 60px;
+    }
+    .info-list-item{
+      padding: 30px 0;
+    }
   }
   @include to(1024px){
     &__text-wrap {
@@ -56,7 +72,27 @@
     &__canvas-wrap {
       width: calc(50% + var(--page-side-fields));
     }
-
+  }
+  @include to(575px){
+    flex-wrap: wrap;
+    &__text-wrap{
+      width: 100%;
+    }
+    &__canvas-wrap{
+      width: 100%;
+      margin-top: 0;
+      order: -1;
+      height: calc(100vw * 0.7);
+      margin-bottom: 20px;
+      margin-left: -14px;
+      margin-right: -14px;
+      width: 100vw;
+      max-width: none;
+      
+    }
+    .info-list-item {
+      padding: 10px 0;
+    }
   }
 
 }
@@ -69,9 +105,4 @@ symbol.active path {
 }
 .front-block__bg{
   display: none;
-}
-
-.front-block canvas {
-  pointer-events: none;
-  // object-fit: cover;
 }
