--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -252,4 +252,5 @@
 @import './pages/developer.scss';
 @import './pages/build-progress.scss';
 @import './pages/leisure-page.scss';
+@import './pages/documents.scss';
 
