--- a/src/pug/includes/popup.pug
+++ b/src/pug/includes/popup.pug
@@ -4,14 +4,6 @@
 .menu-popup(data-menu-popup-block block-popup)
   button(type="button" data-parrent-node-menu) close
   h2 menu
-  ul
-    li 1
-    li 2
-    li 3
-    li 4
-    li 5
-    li 6
-    li 7
-    li 8
-    li 9
-    li 10
+  - var readyPages = ['ctc','sfera','location','build-progress','developer','work-page','leisure-page','gallery','about','documents',]
+  each val in readyPages
+    a(href=val+'.html') #{val} <br>
