news page start

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -253,4 +253,5 @@
 @import './pages/build-progress.scss';
 @import './pages/leisure-page.scss';
 @import './pages/documents.scss';
+@import './pages/news.scss';
 
