--- a/src/assets/styles/pages/documents.scss
+++ b/src/assets/styles/pages/documents.scss
@@ -33,7 +33,7 @@
   }
   @include from(769px){
     &:hover img{
-      transform: scale(1.1) translateX(10px);
+      transform: translateX(10px);
     }
   }
 }
