--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -281,7 +281,7 @@ justify-items:start;
   width: var(--size);
   height: var(--size);
   border-radius: 50%;
-  transition: .3 ease-in-out;
+  transition: .3s ease-in-out;
   text-decoration: none;
   display: flex;
   align-items: center;
