--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -203,6 +203,7 @@ body {
     width:80px;
     height: var(--decor-size);
     padding-right: 30px;
+    flex-shrink: 0;
   }
   .subtitle{
     display: flex;
